== 0.9.3 ==
* Character.search() will now return up to 40 results; previously, it was only 20.
* Character#skills now has an alias - #jobs. Sementically, char.jobs.carpenter makes more sense
  than char.skills.carpenter - the skill name is carpentry.

  They return exactly the same stuff, but #skills should be considered deprecated. I may replace it
  with something else in the future.

== 0.9.2 ==
* Added Character.search() method. It wraps the character search page; an array of hashes will
  be returned with the resulting characters. 
* The full-size portrait URL and thumbnail portrait URLs are now scraped in.

== 0.9.1 ==
* Rails compatability! The #to_json() methods now take an argument (which is promptly dropped on
  the floor) to make ActiveSupport happy.

== 0.9.0 ==
* SkillList#list() changed to SkillList#levelled().
* Characters can be searched and loaded by name. See the README for directions on how to do this.
* Refactored, many things now extend hash.