@@ -14,6 +14,33 @@ class FFXIVLodestone::Character
   end
 end
 
+describe 'Character.search' do
+  it 'should raise an argument error' do
+    should.raise(ArgumentError) { FFXIVLodestone::Character.search() }  
+    should.raise(ArgumentError) { FFXIVLodestone::Character.search(:irrelevant_key => 'value') }  
+    should.raise(ArgumentError) { FFXIVLodestone::Character.search(:world => 'Figaro') }  
+    should.raise(ArgumentError) { FFXIVLodestone::Character.search(:name => 'Ayeron Lifebloom') }  
+    should.raise(ArgumentError) { FFXIVLodestone::Character.search(12345) }  
+    should.raise(ArgumentError) { FFXIVLodestone::Character.search(:name => 'Ayeron Lifebloom', :world => 'FAKE SERVER NAME') }  
+  end
+
+  it 'should accept server as an integer' do
+    should.not.raise(ArgumentError) { FFXIVLodestone::Character.search(:name => 'Ayeron Lifebloom', :world => 7) }
+    
+    c = FFXIVLodestone::Character.new(:name => 'Ayeron Lifebloom', :world => 7)
+    c.character_id.should.equal 1502635
+  end
+
+  it 'should be empty' do
+    FFXIVLodestone::Character.search(:name => 'ABLOO BLOO UGUU', :world => 'Selbina').should.equal([])
+  end
+
+  it 'should list characters' do
+    FFXIVLodestone::Character.search(:name => 'Lady', :world => 'Selbina').should.equal(
+      [{:world=>"Selbina", :portrait_thumb_url=>"http://static.finalfantasyxiv.com/csnap/v05m_ss_7bd793d507a92d2c415b306a83280d19.png?gediwpzz", :name=>"Lady Simmons", :id=>1015990}, {:world=>"Selbina", :portrait_thumb_url=>"http://static.finalfantasyxiv.com/csnap/14fij_ss_f19cd042628445e22a17a9362cb91f26.png?gee0yejc", :name=>"Shukick Fairlady", :id=>1195603}]
+    )
+  end
+end
 describe 'Character(invalid)' do 
   it 'is an invalid id' do
     should.raise(FFXIVLodestone::Character::NotFoundException) { FFXIVLodestone::Character.new('invalid') }
@@ -105,26 +132,5 @@ describe 'Character(1015990)' do
 LOLHEREDOC
 
     JSON.parse(@char.to_json).should.equal JSON.parse(json)
-  end
-end
-
-describe 'Character.search' do
-  it 'should raise an argument error' do
-    should.raise(ArgumentError) { FFXIVLodestone::Character.search() }  
-    should.raise(ArgumentError) { FFXIVLodestone::Character.search(:irrelevant_key => 'value') }  
-    should.raise(ArgumentError) { FFXIVLodestone::Character.search(:world => 'Figaro') }  
-    should.raise(ArgumentError) { FFXIVLodestone::Character.search(:name => 'Ayeron Lifebloom') }  
-    should.raise(ArgumentError) { FFXIVLodestone::Character.search(12345) }  
-    should.raise(ArgumentError) { FFXIVLodestone::Character.search(:name => 'Ayeron Lifebloom', :world => 'FAKE SERVER NAME') }  
-  end
-
-  it 'should be empty' do
-    FFXIVLodestone::Character.search(:name => 'ABLOO BLOO UGUU', :world => 'Selbina').should.equal([])
-  end
-
-  it 'should list characters' do
-    FFXIVLodestone::Character.search(:name => 'Lady', :world => 'Selbina').should.equal(
-      [{:world=>"Selbina", :portrait_thumb_url=>"http://static.finalfantasyxiv.com/csnap/v05m_ss_7bd793d507a92d2c415b306a83280d19.png?gediwpzz", :name=>"Lady Simmons", :id=>1015990}, {:world=>"Selbina", :portrait_thumb_url=>"http://static.finalfantasyxiv.com/csnap/14fij_ss_f19cd042628445e22a17a9362cb91f26.png?gee0yejc", :name=>"Shukick Fairlady", :id=>1195603}]
-    )
   end
 end
