@@ -1,10 +1,18 @@
 == 0.9.3 ==
 * Character.search() will now return up to 40 results; previously, it was only 20.
+
 * Character#skills now has an alias - #jobs. Sementically, char.jobs.carpenter makes more sense
   than char.skills.carpenter - the skill name is carpentry.
 
-  They return exactly the same stuff, but #skills should be considered deprecated. I may replace it
+  They return exactly the same data, but #skills should be considered deprecated. I may replace it
   with something else in the future.
+
+* When specifying :world in Character.search() and Character.new(), you can pass the server's ID
+  number instead of the server's name. You should only use the ID if new servers are opened and
+  the gem has not been updated with the name => ID mapping yet.
+
+* strip_nbsp and strip_nbsp! are added to String to handle Nokogiri's oddness more cleanly. I hope
+  this doesn't fuck up your application.
 
 == 0.9.2 ==
 * Added Character.search() method. It wraps the character search page; an array of hashes will
